[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotools"
version = "0.1.0"
description = "Basic robotics and engineering utility functions"
readme = "README.md"
authors = [
    { name = "Alex" }
]
requires-python = ">=3.9"
dependencies = []